@@ -69,7 +69,6 @@
     </licenses>
 
     <modules>
-        <module>build-tools</module>
         <module>tools</module>
         <module>infra</module>
         <module>repo</module>
@@ -112,10 +111,13 @@
         <ansi.color>true</ansi.color>
         <verbose.jaxb2>false</verbose.jaxb2>
         <verbose.jaxws>false</verbose.jaxws>
-        <!--suppress UnresolvedMavenProperty -->
+
+        <!--suppress UnresolvedMavenProperty (for IDE development) -->
         <git.describe>${describe}</git.describe>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>EEE, d MMM yyyy HH:mm:ss Z</maven.build.timestamp.format>
+
+        <!-- JVM args for testing plugins, can be used to add profiling, etc. -->
         <surefire.args>-Xms1024m -Xmx4096m</surefire.args>
         <failsafe.args>-Xms1024m -Xmx4096m -Duser.language=en</failsafe.args>
         <!--
@@ -1525,6 +1527,11 @@
                 <artifactId>test-ng</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.evolveum.midpoint.infra</groupId>
+                <artifactId>test-util</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -1733,6 +1740,7 @@
 
                                 <!-- Falsely reported, not used explicitly, only transient dependency. -->
                                 <ignoredUsedUndeclaredDependency>org.slf4j:jcl-over-slf4j</ignoredUsedUndeclaredDependency>
+                                <ignoredUsedUndeclaredDependency>org.slf4j:slf4j-api</ignoredUsedUndeclaredDependency>
                                 <ignoredUsedUndeclaredDependency>org.danekja:jdk-serializable-functional</ignoredUsedUndeclaredDependency>
                             </ignoredUsedUndeclaredDependencies>
                         </configuration>
@@ -1747,16 +1755,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>${checkstyle.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.evolveum.midpoint</groupId>
-                        <artifactId>build-tools</artifactId>
-                        <version>${project.version}</version>
-                    </dependency>
-                </dependencies>
                 <configuration>
-                    <configLocation>midpoint-build/checkstyle.xml</configLocation>
-                    <suppressionsLocation>midpoint-build/checkstyle-suppressions.xml</suppressionsLocation>
+                    <configLocation>${maven.multiModuleProjectDirectory}/config/checkstyle/checkstyle.xml</configLocation>
+                    <suppressionsLocation>${maven.multiModuleProjectDirectory}/config/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
@@ -1878,9 +1879,6 @@
                         <forkCount>1</forkCount>
                         <reuseForks>true</reuseForks>
                         <redirectTestOutputToFile>${redirectTestOutputToFile}</redirectTestOutputToFile>
-                        <!-- <threadCount>1</threadCount> -->
-                        <!-- <perCoreThreadCount>false</perCoreThreadCount> -->
-                        <!-- <reportFormat>plain</reportFormat> -->
                         <trimStackTrace>false</trimStackTrace>
                         <!-- See https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
                         <useSystemClassLoader>false</useSystemClassLoader>
@@ -1891,8 +1889,6 @@
                             </java.util.logging.config.file>
                         </systemPropertyVariables>
                         <argLine>${surefire.args}</argLine>
-                        <!--<argLine>-agentpath:/usr/local/yjp-11.0.10/bin/linux-x86-64/libyjpagent.so=alloceach=10,allocsizelimit=1048576,sampling,walltimespec=/home/lazyman/.yjp/config/.walltime,noj2ee,profileruipath=/usr/local/yjp-11.0.10/bin/yjp.sh,onexit=snapshot
-                            -Xms512m -Xmx1024m -XX:MaxPermSize=192m</argLine> -->
 
                         <!-- it's used for CI build to load JDBC libraries which can not
                             be installed to public maven repository (MS SQL, ORACLE) -->
@@ -2000,9 +1996,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
+                <!-- TODO: unify with other checkstyle setup in pluginManagement? -->
                 <version>${checkstyle.version}</version>
                 <configuration>
-                    <configLocation>midpoint-build/checkstyle.xml</configLocation>
+                    <configLocation>${maven.multiModuleProjectDirectory}/build-system/checkstyle-configs/checkstyle.xml</configLocation>
+                    <!-- TODO: what about suppressions? without them and with failsOnError true it must fail, or not? -->
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
@@ -2083,56 +2081,6 @@
             <activation>
                 <jdk>1.8</jdk>
             </activation>
-        </profile>
-
-        <!--
-        Testing profiles - in all cases this skips surefire/failsafe,
-        which is switched on only in specific testing related modules.
-        TODO: How do we run schrodinger? Don't we want it in this mode as well?
-        -->
-        <profile>
-            <id>extratest</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <!-- Skip all tests by default. We only want selected tests to run. -->
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${surefire.version}</version>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>${failsafe.version}</version>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>conntest</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <!-- Skip all tests by default. We only want selected tests to run. -->
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${surefire.version}</version>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>${failsafe.version}</version>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
     </profiles>
 </project>
